<resources>
    <string name="app_name">flj</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location"><u>London, United Kingdom</u></string>

    <string name="view_counter">%d kez goruntulendi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">643883019112948</string>
    <string name="facebook_login_button">Sign in with Facebook</string>
    <string name="facebook_logout_button">Sign out Facebook</string>

    <string name="google_login_button">Sign in with Google</string>
    <string name="google_api_key">AIzaSyBIHIMgLv4Sq9bAJ7b_sMTW-8DYl17F-8A</string>
    <string name="google_client_id">223265251589-b1ojj9mj6pitskb9oh0rksifg3qijje5.apps.googleusercontent.com</string>
    <string name="google_failed_message">Google sign in failed. Please try again.</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_profile">Profile</string>

    <string name="waiting_sign_in_facebook">Waiting for sign in Facebook...</string>
    <string name="waiting_sign_in_google">Waiting for sign in Google...</string>

    <string name="waiting_for_sign_up">Waiting for sign up...</string>
    <string name="waiting_for_sign_in">Waiting for sign in...</string>


    <string name="invalid_email_message">Enter a valid email addres.</string>
    <string name="invalid_password_message">Between 4 and 20 alphanumeric characters.</string>

    <string name="profile_update_message">Your profile updated.</string>
    <string name="profile_fields_required_message">The above fields are required.</string>

    <string name="logout_progress_message">Logging Out...</string>
    <string name="emtpy_account_display_name">Your Profile</string>
    <string name="post_job_activity_title">Post New Job</string>

    <string name="post_job_activity_form_title_hint">Title</string>
    <string name="post_job_activity_form_description_hint">Description</string>
    <string name="post_job_activity_form_country_hint">Country</string>
    <string name="post_job_activity_form_city_hint">City</string>
    <string name="post_job_activity_form_employer_hint">Employer</string>
    <string name="post_job_activity_form_button_save_job">Save Job</string>
    <string name="post_job_activity_form_button_pick_location">Pick Location</string>
    <string name="post_job_activity_form_select_your_location">Select Your Location</string>
    <string name="post_job_activity_loading_map_message">Loading Map...</string>
    <string name="post_job_fields_required_message">The above fields are required.</string>
    <string name="post_job_saving_message">Your job is saving...</string>
    <string name="post_job_added">Your job has been added.</string>
    <string name="title_activity_maps">Map</string>
</resources>
