<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <AutoCompleteTextView
                android:id="@+id/myLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Location..."
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/pickerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="Pick Location"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latlong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <EditText
                android:id="@+id/title"
                android:hint="@string/post_job_activity_form_title_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <EditText
                android:id="@+id/description"
                android:hint="@string/post_job_activity_form_description_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_country"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <EditText
                android:id="@+id/country"
                android:hint="@string/post_job_activity_form_country_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <EditText
                android:id="@+id/city"
                android:hint="@string/post_job_activity_form_city_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_employer"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <EditText
                android:id="@+id/employer"
                android:hint="@string/post_job_activity_form_employer_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg_selector"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>